--- a/temp.ipynb
+++ b/temp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,9 +113,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# init_model() Instantiating model\n",
+      "\tmodel : <class 'transformers.models.gpt2.modeling_gpt2.GPT2LMHeadModel'>\n",
+      "\ttokenizer : <class 'transformers.models.gpt2.tokenization_gpt2_fast.GPT2TokenizerFast'>\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "model_name = 'gpt2-xl'\n",
     "model, tok = init_model(model_name)"
@@ -123,18 +134,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_name = 'mcf'\n",
-    "dataset_size_limit = None\n",
-    "ds = load_data(ds_name, tok, dataset_size_limit)"
+    "# ds_name = 'mcf'\n",
+    "# dataset_size_limit = None\n",
+    "# ds = load_data(ds_name, tok, dataset_size_limit)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +362,7 @@
     "#     else:\n",
     "#         record_dict[subject].append(value)\n",
     "\n",
-    "# with open('./searched_multi_subject.txt', 'w') as f:\n",
+    "# with open('./searched_dup_subj.txt', 'w') as f:\n",
     "#     for subject, values in record_dict.items():\n",
     "#         value_len = len(values)\n",
     "#         if value_len > 1:\n",
@@ -385,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +421,7 @@
     "#             records.append(record)\n",
     "#             # break\n",
     "\n",
-    "# with open('./searched_multi_subject_with_diff_target.txt', 'w') as f:\n",
+    "# with open('./searched_dup_subj_with_diff_target.txt', 'w') as f:\n",
     "#     records_write = []\n",
     "\n",
     "#     for subject, values in record_dict.items():\n",
@@ -426,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,8 +519,8 @@
     "# 실행 코드\n",
     "###############################################################################\n",
     "\n",
-    "# in_file_path = '../data/known_1000.json'\n",
-    "# out_file_path = '../data/known_1000_sr_swap.json'\n",
+    "# in_file_path = './data/known_1000.json'\n",
+    "# out_file_path = './data/known_1000_sr_swap.json'\n",
     "\n",
     "# json_dict_list = json_file_to_dict(in_file_path)\n",
     "# write_dict_list = []\n",
@@ -536,9 +547,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# data_load() ds_class : <class 'dsets.counterfact.MultiCounterFactDataset'>\n",
+      "# data_load() ds_eval_method : <function compute_rewrite_quality_counterfact at 0x7f1d956cc280>\n",
+      "\n",
+      "Loaded dataset with 2000 elements\n",
+      "2000\n"
+     ]
+    }
+   ],
    "source": [
     "###############################################################################\n",
     "# 실행 코드\n",
@@ -549,7 +572,7 @@
     "ds = load_data(ds_name, tok, dataset_size_limit)\n",
     "\n",
     "write_dict_list = []\n",
-    "_check_set = set()\n",
+    "# _check_set = set()\n",
     "\n",
     "for record in ds:\n",
     "    case_id = record['case_id']\n",
@@ -570,10 +593,49 @@
     "# print(_check_set)\n",
     "\n",
     "\n",
-    "out_file_path = '../data/multi_counterfact_sr_swap_.json'\n",
+    "out_file_path = './data/multi_counterfact_sr_swap_.json'\n",
     "f = open_file(out_file_path, mode='w')\n",
     "f.write(to_json_str(write_dict_list))\n",
     "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m현재 셀 또는 이전 셀에서 코드를 실행하는 동안 Kernel이 충돌했습니다. \n",
+      "\u001b[1;31m셀의 코드를 검토하여 가능한 오류 원인을 식별하세요. \n",
+      "\u001b[1;31m자세한 내용을 보려면 <a href='https://aka.ms/vscodeJupyterKernelCrash'>여기</a>를 클릭하세요. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
+     ]
+    }
+   ],
+   "source": [
+    "###############################################################################\n",
+    "# 실행 코드\n",
+    "###############################################################################\n",
+    "\n",
+    "# ds_name = 'mcf'\n",
+    "# dataset_size_limit = None\n",
+    "# ds = load_data(ds_name, tok, dataset_size_limit)\n",
+    "\n",
+    "# import random\n",
+    "# random.seed(7)\n",
+    "# ext_n = 2000\n",
+    "# sampled = random.sample(ds.data, ext_n)\n",
+    "\n",
+    "# print(len(sampled))\n",
+    "\n",
+    "# out_file_path = f'./data/multi_counterfact_ext{ext_n}_.json'\n",
+    "# f = open_file(out_file_path, mode='w')\n",
+    "# f.write(to_json_str(sampled))\n",
+    "# f.close()"
    ]
   }
  ],
